# touri

./: CHANGELOG.md  README.md  TODO.md  goal.yaml  pyproject.toml
examples/21_touri_voice/touri_examples_voice/: stt.py  tts.py  voice_command.py
output/artifacts/operator/: 1781539669139_browser.open.page.json
tests/: conftest.py  test_explain.py  test_fallbacks.py  test_register.py  test_uri2ops_backend.py  test_uri_flow_backend.py  test_voice_capabilities.py
touri/: __init__.py  data_quality.py  executor.py  fallbacks.py  loader.py  manifest.py  redaction.py  register.py  runtime_adapter.py
touri/backends/: __init__.py  mock_backend.py  python_backend.py  shell_backend.py  uri2ops_backend.py  uri_flow_backend.py  uri_graph_backend.py
touri/loaders/: __init__.py  file_loader.py  markpact_loader.py  registry_loader.py
