[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "touri"
version = "0.1.0"
description = "Generic URI-to-capability manifest runtime for reusable URI backends."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0", "uri2pact", "uri2run", "uri2verify"]

[project.scripts]
touri = "touri.cli:main"

[tool.setuptools]
packages = ["touri", "touri.backends", "touri.loaders", "touri_examples", "touri_examples_voice"]

[tool.setuptools.package-dir]
"touri_examples_voice" = "examples/21_touri_voice/touri_examples_voice"

[tool.setuptools.package-data]
touri = ["schemas/*.json"]

[tool.uv.sources]
uri2pact = { git = "https://github.com/tellmesh/uri2pact.git" }
uri2run = { git = "https://github.com/tellmesh/uri2run.git" }
uri2verify = { git = "https://github.com/tellmesh/uri2verify.git" }

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
